[package]
name = "yubikey-validator"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_yubikey"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "yubikey-validator"
path = "src/main.rs"

[dependencies]
hex = "0.4"
aes = "0.8"
libc = "0.2"
file-lock = "2.1.11"
whoami = "1.6.0"
lazy_static = "1.5.0"
